--- a/0917.md
+++ b/0917.md
@@ -79,7 +79,7 @@ $ ssh centos@10.0.2.5
 # 切換成 root 使用者 (switch user)
 $ su -
 
-$ cat /etc/passwd
+$ cat /etc/passwd
 $ cat /etc/passwd | more
 $ cat /etc/passwd | less
 
@@ -92,10 +92,13 @@ $ ps aux | grep <process id / process name>
 $ ps aux | grep vim
 $ ps aux | grep firefox
 
-# 觀看執行程序，以樹狀圖表示 | 翻頁
+# 觀看執行程序，以樹狀圖表示 | 翻頁
 $ pstree | more
 
-# 強制(-9)停止程序
+# 停止程序
+# -2 通知程式停止執行 (Ctrl + C)
+# -9 立刻強制停止程式執行
+# -15 以正常的程序通知程式停止執行 (預設)
 $ kill -9 <process id>
 
 # 動態偵測程序變化
@@ -103,6 +106,7 @@ $ kill -9 <process id>
 # -n <次數> 偵測次數
 $ top -b -n 1 > top.txt
 
+# 顯示最耗效能的程式
 # awk(作者三人名字開頭): 資料處理工具
 $ cat top.txt | head -n 8 | tail -n 2 | awk '{print $1,$2,$12}'
 # PID USER COMMAND
@@ -126,7 +130,7 @@ $ cat /etc/passwd | grep :0:
 ```
 
 ### tty & pts
-1. tty(終端設備的統稱) >> 新增終端機視窗
+1. tty(終端設備的統稱) >> 新增終端機分頁.視窗
 > teletypes, teletypewriters
 
 原來指的是電傳打字機，是通過串行線用打印機鍵盤通過閱讀和發送信息的東西，後來這東西被鍵盤與顯示器取代，所以現在叫終端比較合適。
@@ -137,7 +141,7 @@ $ cat /etc/passwd | grep :0:
 
 但是如果我們遠程telnet到主機或使用xterm時不也需要一個終端交互麼？是的，這就是虛擬終端pty。
 
-3. pts/ptmx (pts/ptmx結合使用，進而實現pty) >> 新增終端機分頁
+3. pts/ptmx (pts/ptmx結合使用，進而實現pty) >> Ctrl + Alt + F1 ~ F6
 > pseudo-terminal slave
 
 pts 是 pty 的實現方法，與 ptmx(pseudo-terminal master) 配合使用實現 pty。
