--- a/1001.md
+++ b/1001.md
@@ -87,23 +87,6 @@ chcon -R -t httpd_user_content_t /home/$1/www
 chcon -t user_home_dir_t /home/$1
 ```
 
-```shell
-#CentOS6
-$ vim /etc/httpd/conf/httpd.conf
-$ service httpd restart
-$ setenforce 0
-$ chkconfig httpd on
-
-#CentOS7
-# vim /etc/httpd/conf/httpd.conf
-$ cd /etc/httpd/conf.d
-$ vim userdir.conf
-$ systemctl restart httpd
-$ setenforce 0
-
-$ systemctl enable httpd
-```
-
 ## /etc/httpd/conf/httpd.conf
 ```shell
 # CentOS 6
@@ -126,6 +109,22 @@ $ systemctl restart httpd
 # 設定開機後立即啟動 httpd 服務 (apache 套件)
 $ systemctl enable httpd
 
+# http in root
+$ cd /var/www/html
+$ mkdir 0925
+$ cd /var/www/html/0925
+$ vim test.php
+# <?php
+#     phpinfo();
+# ?>
+
+# Firefox
+http://10.0.2.4/1001/test.php
+# CentOS 6: PHP Version 5.3.3
+http://10.0.2.15/1001/test.php
+# CentOS 7: PHP Version 5.4.16
+
+# http in user
 $ cd /home
 $ chmod 755 *
 $ ls -l
@@ -135,7 +134,7 @@ $ cd www
 $ vim 123.html
 # <h1>Hello World</h1>
 
-# firefox
+# Firefox
 http://localhost/~centos/
 http://10.0.2.4/~centos/
 http://10.0.2.5/~centos/
