--- a/1001.md
+++ b/1001.md
@@ -109,6 +109,11 @@ $ systemctl restart httpd
 # 設定開機後立即啟動 httpd 服務 (apache 套件)
 $ systemctl enable httpd
 
+# 防火牆 開放 http 服務 永久性生效
+$ firewall-cmd --add-service=http --permanent
+# 防火牆不中斷服務 重新載入
+$ firewall-cmd --reload
+
 # http in root
 $ cd /var/www/html
 $ mkdir 0925
