--- a/1126.md
+++ b/1126.md
@@ -6,7 +6,7 @@ $ cd /home/centos
 # 從 WordPress 官網下載 5.1.3 版安裝檔 (最新版 5.3 不支援舊版的 PHP)
 $ wget https://tw.wordpress.org/wordpress-5.1.3-zh_TW.tar.gz
 # 解壓縮檔案
-$ tar zxvf wordpress-5.1.3-zh_TW.tar.gz
+$ tar -zxvf wordpress-5.1.3-zh_TW.tar.gz
 # 移動檔案到 www 資料夾底下
 $ mv wordpress /home/centos/www/
 # 如果安全性還沒關的話要記得關
