midterm exam - finished

--- a/0311.md
+++ b/0311.md
@@ -10,12 +10,19 @@
 - 網路 IP 位址
 - 實體 IP 位址 (MAC)
 
+### VMWare 新增網路卡
+- I moved:
+- I copy(第一次選): IP不一樣
+
 ### SSH 連線工具
 - [PuTTY](https://www.putty.org/)
-
+- [Git](https://git-scm.com/)
 ```shell
 # 取得 IP 位址
 $ ip addr
+
+# 使用 ssh 連線到 VM
+$ ssh {username}@{ip}
 
 # 重新啟動
 $ reboot
@@ -35,9 +42,10 @@ $ tail
 # 新增、複製與刪除
 $ touch
 $ cp # 時間戳記會更新
-$ cp -a # 時間戳記不會更新
+$ cp -a {old_file_path} {new_file_path} # 時間戳記不會更新
 $ mv
 $ rm
+$ rm -r {dir_path} # 連目錄裡的東西都刪掉
 
 # 檔案詳細資訊
 $ ls
@@ -69,7 +77,7 @@ $ pwd
 
 # 建立、修改與刪除
 $ mkdir
-$ mkdir -p # 中間資料夾不存在時自動建立
+$ mkdir -p {middle_dir}/{bottom_dir} # 中間資料夾不存在時自動建立
 $ mv
 $ rmdir # 刪除"空"資料夾
 ```
@@ -84,7 +92,8 @@ $ rmdir # 刪除"空"資料夾
 
 ### 系統資訊
 ```shell
-# 系統負載 (1, 5, 15 分鐘)
+# 系統平均負載 load average (1, 5, 15 分鐘)
+# 越小越輕鬆
 $ uptime
 
 # 工作管理員
@@ -95,4 +104,7 @@ $ last
 
 # 指令紀錄
 $ history
+
+# 使用手冊
+$ man {command}
 ```
