--- a/0311.md
+++ b/0311.md
@@ -98,6 +98,15 @@ $ uptime
 
 # 工作管理員
 $ top
+# %Cpu(s):  7.4%us,  0.7%sy,  0.0%ni, 92.0%id,  0.0%wa,  0.0%hi,  0.0%si,  0.0%st
+# 7.4%us — user 用戶空間佔用CPU的百分比
+# 0.7% sy — system 內核空間佔用CPU的百分比
+# 0.0% ni — nice 改變過優先順序的進程佔用CPU的百分比
+# 92.0% id - idle 空閒CPU百分比
+# 0.0% wa — wait IO等待佔用CPU的百分比
+# 0.0% hi — hardware interrupts 硬中斷佔用CPU的百分比
+# 0.0% si — software interrupts 軟中斷用CPU的百分比
+# 0.0% st - steal 在虛擬環境下 CPU 運作虛擬機器時間的百分比
 
 # 取得登入資訊 /var/log/wtmp
 $ last
