--- a/0429&0506.md
+++ b/0429&0506.md
@@ -23,7 +23,7 @@ $ systemctl enable cockpit.socket --now
 $ vim /etc/hostname
 ```
 
-## LAMP
+## [LAMP](https://hackmd.io/@esys/SJo6yXNUE)
 
 ### MariaDB
 ```shell
