--- a/0513.md
+++ b/0513.md
@@ -137,3 +137,37 @@ $ setsebool -P samba_enable_home_dirs on
     create mask = 0600           # 建立檔案權限
     directory mask = 0775        # 建立資料夾權限
 ```
+
+### samba 群組管理
+```shell
+$ groupadd mis
+$ groupadd rd
+$ cd /share/
+$ ll
+$ mkdir mis
+$ mkdir rd
+$ chmod 770 mis
+$ chmod 770 rd
+$ ll
+$ useradd -G mis mis01
+$ useradd -G mis mis02
+$ useradd -G rd rd02
+$ useradd -G rd rd01
+$ smbpasswd -a mis01
+$ smbpasswd -a mis02
+$ smbpasswd -a mis01
+$ smbpasswd -a rd01
+$ smbpasswd -a rd02
+$ cat /etc/passwd
+$ cat /etc/group
+$ ll
+$ chgrp mis mis
+$ chgrp rd
+$ chgrp rd rd
+$ less /etc/samba/smb.conf.example
+$ setsebool -P samba_enable_home_dirs on
+$ setsebool -P samba_enable_home_dirs of
+$ setsebool -P samba_enable_home_dirs off
+$ ll
+$ history
+```
