fix(0325): compare sudo vs su

--- a/0325.md
+++ b/0325.md
@@ -1,38 +1,52 @@
 # 0325
 
 ## 管理者權限
+
 - `wheel`群組
-    - 可執行 sudo
-    - 可切換到 root
+  - 可執行 sudo
+  - 可切換到 root
 
 ```shell
+# super user do
 # 用 root 的身分去執行
-# 控管有無權利做 sudo
 # 密碼都是自己的密碼
+# 控管有無權利做 sudo 的設定檔在 /etc/sudoers
 $ sudo
 
+# substitute user
+# 切換使用者
 # 密碼是對方的密碼
-# 連環境變數都變
+# 連環境變數都變 (透過呼叫登入 shell)
 $ su -
-# 環境變數不一樣完全切換
+# 環境變數不一定完全切換 (保持原本使用者的 shell)
 $ su
+
+# 使用 sudo 強制切換 user
+# 跟 su 只差在輸入的密碼不一樣
+# 密碼都是自己的密碼
+$ sudo su -
+$ sudo su
 ```
 
 ## 檔案權限
+
 `-rwxr-xr--`
 `754`
 
 ### 檔案類型
+
 - d(directory): 目錄
 - b(block): 儲存裝置(隨身碟、硬碟)
 - l(link): 連結
 
 ### 檔案類型
+
 - r(read): 讀取
-- w(write)): 寫入
+- w(write): 寫入
 - x(execute): 執行
 
 ### 使用對象
+
 - u(user): 使用者
 - g(group): 群組
 - o(other): 其他
